fixed card spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,18 @@
   font-family: "Poppins", sans-serif;
 }
 
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 body {
   background-color: #eff3ff;
 }
@@ -20,15 +32,14 @@ body {
       flex-wrap: wrap;
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 50px;
 }
 
 .card__container {
   width: 350px;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+  margin: 30px 20px;
 }
 
 .card__content {
